[IntersectionObserver] Don't snap bounding rects

These rects should mirror the behavior of getBoundingClientRect,
which doesn't snap.

BUG=758587,737228

Change-Id: If735df6bd24414dfbbd58dce01dc2a90f71df381
Reviewed-on: https://chromium-review.googlesource.com/951640
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Stefan Zager <szager@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542548}
Former-commit-id: f8bf3f03dd8f4b81cb36d21c8af07844de4e9ecb