third_party/WebKit/Source/core/intersection_observer/IntersectionObserverEntry.cpp
@@ -11,17 +11,18 @@ namespace blink {
 IntersectionObserverEntry::IntersectionObserverEntry(
     DOMHighResTimeStamp time,
     double intersection_ratio,
-    const IntRect& bounding_client_rect,
-    const IntRect* root_bounds,
-    const IntRect& intersection_rect,
+    const FloatRect& bounding_client_rect,
+    const FloatRect* root_bounds,
+    const FloatRect& intersection_rect,
     bool is_intersecting,
     Element* target)
     : time_(time),
       intersection_ratio_(intersection_ratio),
-      bounding_client_rect_(DOMRectReadOnly::FromIntRect(bounding_client_rect)),
-      root_bounds_(root_bounds ? DOMRectReadOnly::FromIntRect(*root_bounds)
+      bounding_client_rect_(
+          DOMRectReadOnly::FromFloatRect(bounding_client_rect)),
+      root_bounds_(root_bounds ? DOMRectReadOnly::FromFloatRect(*root_bounds)
                                : nullptr),
-      intersection_rect_(DOMRectReadOnly::FromIntRect(intersection_rect)),
+      intersection_rect_(DOMRectReadOnly::FromFloatRect(intersection_rect)),
       target_(target),
       is_intersecting_(is_intersecting)
 
